--- a/KerguiWebPage/src/app/inscription2/inscription2.component.html
+++ b/KerguiWebPage/src/app/inscription2/inscription2.component.html
@@ -3,33 +3,33 @@
 
 <body>
     <div class="inscription" @superSmoothSlide>
-        
+
         <div class="droite">
             <img [src]="logoPath" alt="logo" class="logo">
             <h2 class="text-center mb-3 mt-2">{{ title }}</h2>
-    
+
             <form action="">
                 <div class="input-container text-center">
-                    <input type="email" id="email" class="champ" placeholder=" "/>
+                    <input type="email" id="email" class="champ" name="email" [(ngModel)]="user.email"/>
                     <label for="email">Email</label>
                 </div>
                 <div class="input-container text-center">
-                    <input type="password" id="password" class="champ" placeholder=" " />
+                    <input type="password" id="password" class="champ" name="password" [(ngModel)]="user.password" />
                     <label for="password">Mot de passe</label>
                 </div>
                 <div class="input-container text-center">
-                    <input type="password" id="password" class="champ" placeholder=" " />
+                    <input type="password" id="password" class="champ" name="confirmPassword" [(ngModel)]="user.confirmPassword" />
                     <label for="password">Confirmer mot de passe</label>
                 </div>
             </form>
             <button class="text-center mt-4 mt-xxl-5">
-                <a routerLink="/connexion" class="bouton">S'inscrire</a>
+                <a (click)="submitStep2()" class="bouton">S'inscrire</a>
             </button>
             <!-- <p class="connexion mt-4 mt-xxl-5">
                 <span>Vous avez déjà un compte ? </span>
                 <a routerLink="/connexion" class="lien-connexion">Connectez-vous</a>
               </p> -->
-              
+
         </div>
         <div class="gauche">
             <img [src]="imgPath" alt="maison" class="maison">
