--- a/KerguiWebPage/src/app/inscription/inscription.component.html
+++ b/KerguiWebPage/src/app/inscription/inscription.component.html
@@ -8,34 +8,34 @@
             <h2>Avec KeurGui Energy,</h2>
             <h3>{{ slogan }}</h3>
         </div>
-        
+
         <div class="droite">
             <img [src]="logoPath" alt="logo" class="logo">
             <h2 class="text-center mb-3 mt-2">{{ title }}</h2>
-    
+
             <form action="">
                 <div class="input-container text-center">
-                    <input type="text" id="prenom" class="champ" placeholder=" "/>
+                    <input type="text" id="prenom" class="champ" name="prenom" [(ngModel)]="user.prenom"/>
                     <label for="prenom">Prénom</label>
                 </div>
                 <div class="input-container text-center">
-                    <input type="text" id="nom" class="champ" placeholder=" " />
+                    <input type="text" id="nom" class="champ" name="nom" [(ngModel)]="user.nom"/>
                     <label for="nom">Nom</label>
                 </div>
                 <div class="input-container text-center">
-                    <input type="number" id="telephone" class="champ" placeholder=" " />
+                    <input type="number" id="telephone" class="champ" name="telephone" [(ngModel)]="user.telephone" />
                     <label for="telephone">Téléphone</label>
                 </div>
             </form>
             <button class="text-center mt-4 mt-xxl-5">
-                <a routerLink="/inscription2" class="bouton">Suivant</a>
+                <a class="bouton" (click)="submitStep1()">Suivant</a>
             </button>
             <p class="connexion mt-4 mt-xxl-5">
                 <span>Vous avez déjà un compte ? </span>
                 <a routerLink="/connexion" class="lien-connexion">Connectez-vous</a>
-            </p>       
+            </p>
         </div>
-        
+
     </div>
 </body>
 
